<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b6a5d285eec1dd2f02aeff0739745b16"
    tools:context=".ShowActivity.ShowDramaActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageDramaShow"
                android:layout_width="397dp"
                android:layout_height="205dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="364dp"
                android:layout_height="339dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:weightSum="7"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageDramaShow">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/titleDramaView"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/title_movie"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/titleDramaShow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textMultiLine"
                        android:maxLines="2"
                        android:textColor="@android:color/background_light" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/genreDramaView"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/genre_movie"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/genreDramaShow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textMultiLine"
                        android:textColor="@android:color/background_light" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="322dp">

                    <TextView
                        android:id="@+id/releaseDramaView"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/release_year"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/releaseYearDramaShow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textMultiLine"
                        android:textColor="@android:color/background_light" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="388dp">

                    <TextView
                        android:id="@+id/directorDramaView"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/director"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/directorDramaShow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textMultiLine"
                        android:textColor="@android:color/background_light" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="447dp">

                    <TextView
                        android:id="@+id/starringDramaView"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/starring"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/starringDramaShow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textMultiLine"
                        android:textColor="@android:color/background_light" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="545dp">

                    <TextView
                        android:id="@+id/descriptionDramaView"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/description_drama"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/descriptionDramaShow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textMultiLine"
                        android:textColor="@android:color/background_light" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/countryView"
                        android:layout_width="27dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/country_drama"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/countryToShow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textMultiLine"
                        android:textColor="@android:color/background_light" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:text="Favourite"
                    android:textColor="@android:color/background_light" />

                <com.example.moviemanagement2.CustomDrawing.CustomFav
                    android:id="@+id/favouriteDramaView"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:layout_gravity="center"
                    android:clickable="false" />
            </LinearLayout>

            <Button
                android:id="@+id/showEp"
                android:layout_width="112dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="@drawable/round_edge"
                android:onClick="onShowEpisodeClick"
                android:text="@string/show_ep"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="1.0" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>